<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Fonts-->
    <string name="font_regular">fonts/en/regular.ttf</string>
    <string name="font_light">fonts/en/light.ttf</string>
    <string name="font_bold">fonts/en/bold.ttf</string>

    <!--Others-->
    <string name="app_name" translatable="false">کیف پول من</string>
    <string name="home_menu">Home</string>
    <string name="profile_menu">Profile</string>
    <string name="setting_menu">Setting</string>
    <string name="under_construction">Under construction</string>
    <string name="transaction_add">New transaction</string>
    <string name="nothing_found">Nothing found</string>
    <string name="add_card">Add card</string>
    <string name="cards">Cards</string>
    <string name="need_card_description">You need to add credit card to add transactions, please create a credit card and continue to add transactions.</string>
    <string name="select_bank">Select bank</string>
    <string name="card_name">Credit card name</string>
    <string name="card_current_balance">Current balance</string>
    <string name="store_error">Something went wrong during store item, please try again</string>
    <string name="store">Save</string>
    <string name="select_bank_error">Please select a bank</string>
    <string name="card_name_error">Please enter credit card name</string>
    <string name="card_current_balance_error">Please enter current cash of credit card</string>
    <string name="store_success">Stored successfully</string>
    <string name="default_balance_value">0</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="select_card">Select credit card</string>
    <string name="select_category">Select category</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="select_card_error">Please select credit card</string>
    <string name="select_category_error">Please select category</string>
    <string name="amount_error">Please enter amount</string>
    <string name="amount_value_error">The amount must be greater than zero</string>
    <string name="sample_date">March 20, 2024</string>
    <string name="sample_date_time">March 20, 2024 12:00</string>
    <string name="sample_price">20,000 Toman</string>
    <string name="sample_card">Credit card</string>
    <string name="price_sign">Toman</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="transaction_edit">Edit transaction</string>
    <string name="filter">Filter</string>
    <string name="do_filter">Filter</string>
    <string name="remove_filter">Remove filter</string>
    <string name="transaction_list">Transactions</string>
    <string name="my_cards">My cards</string>
    <string name="categories">Categories</string>
    <string name="entry_balance">Entry balance: %s</string>
    <string name="deposits_amount">Deposits: %s</string>
    <string name="withdraws_amount">Withdraws: %s</string>
    <string name="created_at">Created at: %s</string>
    <string name="balance_amount">Balance: %s</string>
</resources>